# zero2prod

./: .dockerignore  Cargo.toml  Dockerfile  Rocket.toml
.github/workflows/: audit.yml  general.yml  scheduled-audit.yml
migrations/2022-01-30-190912_create_subscriptions_table/: up.sql
scripts/: init_db.sh
src/: configuration.rs  lib.rs  main.rs  schema.rs  startup.rs  telemetry.rs
src/routes/: health_check.rs  subscribe.rs  subscriptions.rs
tests/: health_check.rs
