[package]
name = "zero2prod"
version = "0.1.0"
authors = ["Mark Melczer <melczer7@gmail.com>"]
edition = "2018"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "app"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[dependencies]
actix-web = "2.0.0"
actix-rt = "1.1.1"
chrono = "0.4.15"
config = { version = "0.10.1", default-features = false, features = ["yaml"] }
env_logger = "0.8.1"
sqlx = { version = "0.4.0-beta.1", default-features = false, features = ["runtime-tokio", "macros", "postgres", "uuid", "chrono", "migrate"] }
serde = { version = "1", features = ["derive"] }
tracing = "0.1.21"
uuid = { version = "0.8.1", features = ["v4"] }

[dev-dependencies]
reqwest = "0.10.8"
tokio = "0.2.22"
