[package]
name = "zero2prod"
version = "0.0.1"
authors = ["PopcornPaws <lipschitz77@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[dependencies]
chrono = { version = "0.4.19", features = ["serde"] }
diesel = { version = "1.4.8", features = ["postgres", "uuidv07", "chrono"] }
rocket = { version = "0.5.0-rc.1", features = ["json"] }
rocket_contrib = { version = "0.4.10", features = ["uuid"] }
uuid = { version = "0.8.2", features = ["serde", "v4"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default_features = false
features = ["diesel_postgres_pool"]
