[package]
name = "zero2prod"
version = "0.1.0"
authors = ["lipschitz <lipschitz77@gmail.com>"]
edition = "2021"

[lib]
path = "src/lib.rs"

[profile.dev]
opt-level = 3

[profile.test]
opt-level = 3

[dependencies]
actix-web = "4"
config = "0.11"
serde = { version = "1", features = ["derive"] }
sqlx = { version = "0.5.7", default-features = false, features = ["runtime-actix-rustls", "macros", "postgres", "uuid", "chrono", "migrate"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }

[dev-dependencies]
reqwest = "0.11"
